--- a/pom.xml
+++ b/pom.xml
@@ -6,16 +6,195 @@
 
   <groupId>com.ly</groupId>
   <artifactId>Pagoda</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0.1</version>
   <packaging>pom</packaging>
 
   <prerequisites>
     <maven>2.0.6</maven>
   </prerequisites>
 
+  <licenses>
+    <license>
+    </license>
+  </licenses>
+
+  <scm>
+  </scm>
+
+  <issueManagement>
+  </issueManagement>
+
+  <developers>
+    <developer>
+    </developer>
+  </developers>
+
   <modules>
+
+    <!--Estimation-->
+    <module>Monkey</module>
+    <module>PD-Capture</module>
+    <module>PD-Utils</module>
 
   </modules>
   
+  <build>
+    <defaultGoal>install</defaultGoal>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>2.3.2</version>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>2.2</version>
+      </plugin>
+      <plugin>
+        <artifactId>maven-resources-plugin</artifactId>
+        <version>2.4.3</version>
+        <configuration>
+          <encoding>UTF-8</encoding>
+        </configuration>
+      </plugin>
+      <plugin>
+        <artifactId>maven-eclipse-plugin</artifactId>
+        <version>2.5.1</version>
+        <configuration>
+          <additionalProjectnatures>
+            <projectnature>org.springframework.ide.eclipse.core.springnature</projectnature>
+          </additionalProjectnatures>
+          <additionalBuildcommands>
+            <buildcommand>org.springframework.ide.eclipse.core.springbuilder</buildcommand>
+          </additionalBuildcommands>
+          <downloadSources>true</downloadSources>
+          <downloadJavadocs>true</downloadJavadocs>
+          <wtpversion>1.5</wtpversion>
+        </configuration>
+      </plugin>
+      <plugin>
+        <artifactId>maven-idea-plugin</artifactId>
+        <version>2.1</version>
+        <configuration>
+          <downloadSources>true</downloadSources>
+          <downloadJavadocs>true</downloadJavadocs>
+          <dependenciesAsLibraries>true</dependenciesAsLibraries>
+          <useFullNames>false</useFullNames>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>2.3.2</version>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+          <encoding>UTF-8</encoding>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-source-plugin</artifactId>
+        <version>2.1.2</version>
+        <executions>
+          <execution>
+            <id>attach-sources</id>
+            <phase>verify</phase>
+            <goals>
+              <goal>jar-no-fork</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>buildnumber-maven-plugin</artifactId>
+        <version>1.0-beta-3</version>
+        <configuration>
+          <format>{0,date,yyyy-MM-dd HH:mm:ss}</format>
+          <items>
+            <item>timestamp</item>
+          </items>
+          <doCheck>true</doCheck>
+          <doUpdate>true</doUpdate>
+        </configuration>
+        <executions>
+          <execution>
+            <phase>validate</phase>
+            <goals>
+              <goal>create</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
+
+  <dependencies>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-log4j12</artifactId>
+      <version>${slf4j.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>${slf4j.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>net.sf.json-lib</groupId>
+      <artifactId>json-lib</artifactId>
+      <version>${json-lib.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-core</artifactId>
+      <version>${spring.version}</version>
+    </dependency>
+  </dependencies>
   
-  </project>
+
+  <properties>
+    <!-- Framework dependency versions -->
+    <spring.version>4.3.0.RELEASE</spring.version>
+
+    <!-- Testing dependency versions -->
+    <jsp.version>2.2</jsp.version>
+    <junit.version>4.12</junit.version>
+    <servlet.version>3.1.0</servlet.version>
+
+    <HikariCP.version>2.4.6</HikariCP.version>
+    <dwr.version>3.0.1-RELEASE</dwr.version>
+    <hibernate.core.version>5.2.0.Final</hibernate.core.version>
+    <hibernate.cglib.version>2.1_3</hibernate.cglib.version>
+    <json-lib.version>2.4</json-lib.version>
+    <joda-time.version>2.9.3</joda-time.version>
+    <jstl.version>1.1.2</jstl.version>
+    <jxl.version>2.6.10</jxl.version>
+    <logback.classic.version>1.1.2</logback.classic.version>
+    <jcl.over.slf4j.version>1.6.1</jcl.over.slf4j.version>
+    <log4j.over.slf4j.version>1.6.1</log4j.over.slf4j.version>
+    <jawr.version>3.8</jawr.version>
+    <slf4j.version>1.6.1</slf4j.version>
+    <javax.batch.version>1.0.1</javax.batch.version>
+    <spring.batch2.version>3.0.7.RELEASE</spring.batch2.version>
+    <spring.security.version>4.1.0.RELEASE</spring.security.version>
+    <springmodules.validation.version>0.8</springmodules.validation.version>
+    <urlrewrite.version>3.0.4</urlrewrite.version>
+    <jsoup.version>1.7.2</jsoup.version>
+    <spring-security-saml.version>1.0.2.RELEASE</spring-security-saml.version>
+    <jackson.version>1.9.3</jackson.version>
+    <httpclient.version>4.5.2</httpclient.version>
+    <httpmime.version>3.1</httpmime.version>
+
+  </properties>
+  
+  
+  
+
+</project>
