Pagoda add logback.

--- a/Monkey/pom.xml
+++ b/Monkey/pom.xml
@@ -18,8 +18,13 @@
   
   
   <dependencies>
-   
 
+    <dependency>
+      <groupId>com.ly</groupId>
+      <artifactId>PD-Capture</artifactId>
+      <version>${app.version}</version>
+    </dependency>
+    
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
       <artifactId>httpclient</artifactId>
@@ -34,12 +39,6 @@
       <groupId>org.apache.httpcomponents</groupId>
       <artifactId>httpmime</artifactId>
       <version>${httpclient.version}</version>
-      <!--<exclusions>-->
-        <!--<exclusion>-->
-          <!--<groupId>*</groupId>-->
-          <!--<artifactId>*</artifactId>-->
-        <!--</exclusion>-->
-      <!--</exclusions>-->
     </dependency>
 
    
