--- a/PD-Capture/pom.xml
+++ b/PD-Capture/pom.xml
@@ -19,8 +19,10 @@
     <dependency>
       <groupId>com.ly</groupId>
       <artifactId>PD-Utils</artifactId>
-      <version>1.0.1</version>
+      <version>${app.version}</version>
     </dependency>
+
+  
 
   </dependencies>
   
