Pagoda add appName property.

--- a/Monkey/src/main/resources/dev.properties
+++ b/Monkey/src/main/resources/dev.properties
@@ -2,7 +2,7 @@
 CAPTURE_USERNAME=
 CAPTURE_PASSWORD=
 
-# App Name
-appName=com_ly_pagoda_app
+# Organization Name
+organizationName=com_ly_pagoda_app
 
 
