--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
     <module>PD-Utils</module>
     <module>PD-Capture</module>
     <!--models-->
-    <module>Stalagnate</module>
+    <module>Lion</module>
     <!--Estimation-->
     <module>Monkey</module>
     
