--- a/pom.xml
+++ b/pom.xml
@@ -181,6 +181,15 @@
     <app.version>1.0.1</app.version>
     <!-- Framework dependency versions -->
     <spring.version>4.3.0.RELEASE</spring.version>
+    <java.version>1.8</java.version>
+    <!-- Testing dependency versions -->
+    <jmock.version>2.4.0</jmock.version>
+    <jsp.version>2.2</jsp.version>
+    <spring.jsp.version>2.1.0</spring.jsp.version>
+    <junit.version>4.12</junit.version>
+    <junit.dep.version>4.10</junit.dep.version>
+    <servlet.version>3.1.0</servlet.version>
+    <spring.servlet.version>2.5.0</spring.servlet.version>
 
     <!-- Testing dependency versions -->
     <jsp.version>2.2</jsp.version>
