--- a/Rabbit/pom.xml
+++ b/Rabbit/pom.xml
@@ -12,7 +12,7 @@
   </parent>
   
   <artifactId>Rabbit</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <packaging>jar</packaging>
   <name>Pagoda Service</name>
   <description>Pagoda Service</description>
 
