--- a/Rabbit/src/test/resources/log4j.properties
+++ b/Rabbit/src/test/resources/log4j.properties
@@ -18,7 +18,7 @@ log4j.appender.R=org.apache.log4j.RollingFileAppender
 # to contain this variables - for example in the catalina.sh or catalina.bat
 # file
 
-log4j.appender.R.File=MyAPP.log
+log4j.appender.R.File=Rabbit.log
 
 log4j.appender.R.MaxFileSize=100KB
 
