--- a/Dragon/pom.xml
+++ b/Dragon/pom.xml
@@ -387,36 +387,36 @@
       </exclusions>
     </dependency>
 
-    <dependency>
-      <groupId>net.jawr</groupId>
-      <artifactId>jawr-core</artifactId>
-      <version>${jawr.version}</version>
-      <exclusions>
-        <exclusion>
-          <artifactId>slf4j-log4j12</artifactId>
-          <groupId>org.slf4j</groupId>
-        </exclusion>
-        <exclusion>
-          <artifactId>log4j</artifactId>
-          <groupId>log4j</groupId>
-        </exclusion>
-      </exclusions>
-    </dependency>
-    <dependency>
-      <groupId>net.jawr</groupId>
-      <artifactId>jawr-core</artifactId>
-      <version>${jawr.version}</version>
-      <exclusions>
-        <exclusion>
-          <artifactId>slf4j-log4j12</artifactId>
-          <groupId>org.slf4j</groupId>
-        </exclusion>
-        <exclusion>
-          <artifactId>log4j</artifactId>
-          <groupId>log4j</groupId>
-        </exclusion>
-      </exclusions>
-    </dependency>
+    <!--<dependency>-->
+      <!--<groupId>net.jawr</groupId>-->
+      <!--<artifactId>jawr-core</artifactId>-->
+      <!--<version>${jawr.version}</version>-->
+      <!--<exclusions>-->
+        <!--<exclusion>-->
+          <!--<artifactId>slf4j-log4j12</artifactId>-->
+          <!--<groupId>org.slf4j</groupId>-->
+        <!--</exclusion>-->
+        <!--<exclusion>-->
+          <!--<artifactId>log4j</artifactId>-->
+          <!--<groupId>log4j</groupId>-->
+        <!--</exclusion>-->
+      <!--</exclusions>-->
+    <!--</dependency>-->
+    <!--<dependency>-->
+      <!--<groupId>net.jawr</groupId>-->
+      <!--<artifactId>jawr-core</artifactId>-->
+      <!--<version>${jawr.version}</version>-->
+      <!--<exclusions>-->
+        <!--<exclusion>-->
+          <!--<artifactId>slf4j-log4j12</artifactId>-->
+          <!--<groupId>org.slf4j</groupId>-->
+        <!--</exclusion>-->
+        <!--<exclusion>-->
+          <!--<artifactId>log4j</artifactId>-->
+          <!--<groupId>log4j</groupId>-->
+        <!--</exclusion>-->
+      <!--</exclusions>-->
+    <!--</dependency>-->
 
     <!--<dependency>-->
       <!--<groupId>org.slf4j</groupId>-->
