--- a/Dragon/src/main/resources/log4j.properties
+++ b/Dragon/src/main/resources/log4j.properties
@@ -33,7 +33,7 @@ log4j.appender.mail=org.apache.log4j.net.SMTPAppender
 log4j.appender.mail.SMTPHost=localhost
 log4j.appender.mail.Threshold=ERROR
 log4j.appender.mail.BufferSize=1
-log4j.appender.mail.Subject=[localhost] MyApp Application Error
+log4j.appender.mail.Subject=[localhost] Dragon Application Error
 
 log4j.appender.mail.layout=org.apache.log4j.PatternLayout
 log4j.appender.mail.layout.ConversionPattern=%d  %-5p %c %x - %m%n
@@ -64,13 +64,6 @@ log4j.logger.org.apache.velocity=WARN
 log4j.logger.org.tuckey.web.filters=WARN
 
 log4j.logger.org.directwebremoting=WARN
-
-#log4j.logger.org.springmodules=DEBUG
-#log4j.logger.org.apache.jackrabbit=DEBUG
-
-# Don't show debug logs for WebTest
-log4j.logger.com.canoo.webtest=WARN
-log4j.logger.com.gargoylesoftware.htmlunit=WARN
 
 # All hibernate log output of "info" level or higher goes to stdout.
 # For more verbose logging, change the "info" to "debug" on the last line.
