Lion - update the models

--- a/Lion/pom.xml
+++ b/Lion/pom.xml
@@ -27,6 +27,12 @@
       <artifactId>hibernate-core</artifactId>
       <version>${hibernate.core.version}</version>
     </dependency>
+    <!--Spring Security-->
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-core</artifactId>
+      <version>${spring-security.version}</version>
+    </dependency>
   </dependencies>
   
   
