Dragon - add user and role manager.

--- a/Dragon/src/main/resources/pagoda.dev.properties
+++ b/Dragon/src/main/resources/pagoda.dev.properties
@@ -3,7 +3,7 @@ hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
 # JDBC Config
 JDBC_DRIVER=com.mysql.jdbc.Driver
-JDBC_URL=jdbc\:mysql\://localhost/Pagoda?useUnicode\=true&characterEncoding\=utf-8
+JDBC_URL=jdbc\:mysql\://localhost:3306/Pagoda?useUnicode\=true&characterEncoding\=utf-8
 JDBC_USERNAME=root
 JDBC_PASSWORD=Passw0rd
 
