--- a/Dragon/pom.xml
+++ b/Dragon/pom.xml
@@ -167,6 +167,12 @@
       <artifactId>HikariCP</artifactId>
       <version>${HikariCP.version}</version>
     </dependency>
+
+    <dependency>
+      <groupId>com.jolbox</groupId>
+      <artifactId>bonecp</artifactId>
+      <version>${bonecp.version}</version>
+    </dependency>
     
     <dependency>
       <groupId>javax.servlet</groupId>
