--- a/Monkey/pom.xml
+++ b/Monkey/pom.xml
@@ -75,6 +75,11 @@
     </dependency>
     <dependency>
       <groupId>org.seleniumhq.selenium</groupId>
+      <artifactId>selenium-safari-driver</artifactId>
+      <version>2.53.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.seleniumhq.selenium</groupId>
       <artifactId>selenium-api</artifactId>
       <version>LATEST</version>
     </dependency>
