--- a/pom.xml
+++ b/pom.xml
@@ -272,6 +272,10 @@
     <taglibs.version>1.1.2</taglibs.version>
     <xstream.version>1.3.1</xstream.version>
     
+    <jasypt.version>1.9.2</jasypt.version>
+    <!--<httpcomponents.version>4.5.2</httpcomponents.version>-->
+    <!--<httpclient.version>3.1</httpclient.version>-->
+    
     
 
   </properties>
