--- a/Dragon/src/main/webapp/WEB-INF/web.xml
+++ b/Dragon/src/main/webapp/WEB-INF/web.xml
@@ -116,41 +116,52 @@
     <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
     <load-on-startup>2</load-on-startup>
   </servlet>
+  
+  <!--JAWR start-->
+  <servlet>
+    <servlet-name>JavascriptServlet</servlet-name>
+    <servlet-class>net.jawr.web.servlet.JawrServlet</servlet-class>
 
-  <!--<servlet>-->
-    <!--<servlet-name>dwr-invoker</servlet-name>-->
-    <!--<servlet-class>org.directwebremoting.spring.DwrSpringServlet</servlet-class>-->
-    <!--<init-param>-->
-      <!--<param-name>debug</param-name>-->
-      <!--<param-value>true</param-value>-->
-    <!--</init-param>-->
-    <!--<init-param>-->
-      <!--<param-name>scriptCompressed</param-name>-->
-      <!--<param-value>false</param-value>-->
-    <!--</init-param>-->
-    <!--<init-param>-->
-      <!--<param-name>crossDomainSessionSecurity</param-name>-->
-      <!--<param-value>false</param-value>-->
-    <!--</init-param>-->
-    <!--<init-param>-->
-      <!--<param-name>activeReverseAjaxEnabled</param-name>-->
-      <!--<param-value>true</param-value>-->
-    <!--</init-param>-->
-    <!--<init-param>-->
-      <!--<param-name>allowScriptTagRemoting</param-name>-->
-      <!--<param-value>true</param-value>-->
-    <!--</init-param>-->
-    <!--<load-on-startup>3</load-on-startup>-->
-  <!--</servlet>-->
-  <!--<servlet-mapping>-->
-    <!--<servlet-name>dwr-invoker</servlet-name>-->
-    <!--<url-pattern>/dwr/*</url-pattern>-->
-  <!--</servlet-mapping>-->
+    <!-- Location in classpath of the config file -->
+    <init-param>
+      <param-name>configLocation</param-name>
+      <param-value>/jawr.properties</param-value>
+    </init-param>
+    <load-on-startup>3</load-on-startup>
+  </servlet>
 
-  <!--<servlet-mapping>-->
-    <!--<servlet-name>dwr-invoker</servlet-name>-->
-    <!--<url-pattern>/html/dwr/*</url-pattern>-->
-  <!--</servlet-mapping>-->
+  <servlet>
+    <servlet-name>ImgServlet</servlet-name>
+    <servlet-class>net.jawr.web.servlet.JawrServlet</servlet-class>
+
+    <!-- Location in classpath of the config file -->
+    <init-param>
+      <param-name>configLocation</param-name>
+      <param-value>/jawr.properties</param-value>
+    </init-param>
+    <init-param>
+      <param-name>type</param-name>
+      <param-value>binary</param-value>
+    </init-param>
+    <load-on-startup>4</load-on-startup>
+  </servlet>
+
+  <servlet>
+    <servlet-name>CSSServlet</servlet-name>
+    <servlet-class>net.jawr.web.servlet.JawrServlet</servlet-class>
+
+    <!-- Location in classpath of the config file -->
+    <init-param>
+      <param-name>configLocation</param-name>
+      <param-value>/jawr.properties</param-value>
+    </init-param>
+    <init-param>
+      <param-name>type</param-name>
+      <param-value>css</param-value>
+    </init-param>
+    <load-on-startup>5</load-on-startup>
+  </servlet>
+  <!--JAWR end-->
 
   <servlet-mapping>
     <servlet-name>dispatcher</servlet-name>
@@ -183,6 +194,26 @@
   <servlet-mapping>
     <servlet-name>dispatcher</servlet-name>
     <url-pattern>/security/*</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>JavascriptServlet</servlet-name>
+    <url-pattern>*.js</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>CSSServlet</servlet-name>
+    <url-pattern>*.css</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>ImgServlet</servlet-name>
+    <url-pattern>*.gif</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>ImgServlet</servlet-name>
+    <url-pattern>*.jpg</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>ImgServlet</servlet-name>
+    <url-pattern>*.png</url-pattern>
   </servlet-mapping>
 
 
