--- a/pom.xml
+++ b/pom.xml
@@ -271,6 +271,7 @@
     <junit.version>4.12</junit.version>
     <taglibs.version>1.1.2</taglibs.version>
     <xstream.version>1.3.1</xstream.version>
+    <jawr.version>3.8</jawr.version>
     
     <jasypt.version>1.9.2</jasypt.version>
     <!--<httpcomponents.version>4.5.2</httpcomponents.version>-->
