--- a/Dragon/pom.xml
+++ b/Dragon/pom.xml
@@ -325,6 +325,11 @@
       <artifactId>spring-modules-validation</artifactId>
       <version>${spring-modules-validation.version}</version>
     </dependency>
+    <!--<dependency>-->
+      <!--<groupId>org.springframework</groupId>-->
+      <!--<artifactId>spring-web</artifactId>-->
+      <!--<version>${spring.version}</version>-->
+    <!--</dependency>-->
 
     
     <!--Spring Security-->
