--- a/Dragon/src/main/webapp/WEB-INF/web.xml
+++ b/Dragon/src/main/webapp/WEB-INF/web.xml
@@ -29,7 +29,7 @@
     <param-value>
       classpath:/applicationContext-resources.xml
       classpath*:/applicationContext*.xml
-      <!--/WEB-INF/security.xml-->
+      /WEB-INF/security.xml
       /WEB-INF/applicationContext-dwr.xml
       /WEB-INF/dispatcher-servlet.xml
     </param-value>
@@ -58,14 +58,14 @@
   </filter>
  
 
-  <!--<filter>-->
-    <!--<filter-name>springSecurityFilterChain</filter-name>-->
-    <!--<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>-->
-  <!--</filter>-->
-  <!--<filter-mapping>-->
-    <!--<filter-name>springSecurityFilterChain</filter-name>-->
-    <!--<url-pattern>/*</url-pattern>-->
-  <!--</filter-mapping>-->
+  <filter>
+    <filter-name>springSecurityFilterChain</filter-name>
+    <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>springSecurityFilterChain</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
   
   <filter-mapping>
     <filter-name>encodingFilter</filter-name>
