Cheetah add y-h-d normal order.

--- a/Cheetah/pom.xml
+++ b/Cheetah/pom.xml
@@ -135,6 +135,12 @@
       <artifactId>poi-ooxml-schemas</artifactId>
       <version>${poi.version}</version>
     </dependency>
+
+    <dependency>
+      <groupId>xerces</groupId>
+      <artifactId>xerces</artifactId>
+      <version>${xerces.version}</version>
+    </dependency>
   </dependencies>
 
 
