--- a/pom.xml
+++ b/pom.xml
@@ -184,7 +184,14 @@
       <artifactId>spring-beans</artifactId>
       <version>${spring.version}</version>
     </dependency>
-    
+
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context</artifactId>
+      <version>${spring.version}</version>
+    </dependency>
+
+
   </dependencies>
   
 
@@ -272,6 +279,7 @@
     <taglibs.version>1.1.2</taglibs.version>
     <xstream.version>1.3.1</xstream.version>
     <jawr.version>3.8</jawr.version>
+    <xerces.version>2.4.0</xerces.version>
     
     <jasypt.version>1.9.2</jasypt.version>
     <!--<httpcomponents.version>4.5.2</httpcomponents.version>-->
