--- a/Monkey/pom.xml
+++ b/Monkey/pom.xml
@@ -29,6 +29,12 @@
       <groupId>com.ly</groupId>
       <artifactId>PD-Utils</artifactId>
       <version>${app.version}</version>
+      <exclusions>
+        <exclusion>
+          <groupId>*</groupId>
+          <artifactId>*</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     
     <dependency>
