--- a/Cheetah/pom.xml
+++ b/Cheetah/pom.xml
@@ -31,6 +31,12 @@
       <groupId>com.ly</groupId>
       <artifactId>PD-Utils</artifactId>
       <version>${app.version}</version>
+      <exclusions>
+        <exclusion>
+          <groupId>*</groupId>
+          <artifactId>*</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>com.ly</groupId>
@@ -141,6 +147,13 @@
       <artifactId>xerces</artifactId>
       <version>${xerces.version}</version>
     </dependency>
+
+    <!--<dependency>-->
+      <!--<groupId>com.ice.jni</groupId>-->
+      <!--<artifactId>registry</artifactId>-->
+      <!--<version>3.1.3</version>-->
+    <!--</dependency>-->
+    
   </dependencies>
 
 
