--- a/PD-Proxy/src/main/resources/log4j.properties
+++ b/PD-Proxy/src/main/resources/log4j.properties
@@ -9,7 +9,7 @@ log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 
 # Pattern to output the caller's file name and line number.
-log4j.appender.stdout.layout.ConversionPattern=[Cheetah] %d{ISO8601} %p [%t] %C.%M(%L) | %m%n
+log4j.appender.stdout.layout.ConversionPattern=[PD-Proxy] %d{ISO8601} %p [%t] %C.%M(%L) | %m%n
 
 log4j.appender.R=org.apache.log4j.RollingFileAppender
 
@@ -18,7 +18,7 @@ log4j.appender.R=org.apache.log4j.RollingFileAppender
 # to contain this variables - for example in the catalina.sh or catalina.bat
 # file
 
-log4j.appender.R.File=Cheetah.log
+log4j.appender.R.File=PD-Proxy.log
 
 log4j.appender.R.MaxFileSize=1024KB
 
@@ -33,7 +33,7 @@ log4j.appender.mail=org.apache.log4j.net.SMTPAppender
 log4j.appender.mail.SMTPHost=localhost
 log4j.appender.mail.Threshold=ERROR
 log4j.appender.mail.BufferSize=1
-log4j.appender.mail.Subject=[localhost] Cheetah Application Error
+log4j.appender.mail.Subject=[localhost] PD-Proxy Application Error
 
 log4j.appender.mail.layout=org.apache.log4j.PatternLayout
 log4j.appender.mail.layout.ConversionPattern=%d  %-5p %c %x - %m%n
@@ -42,7 +42,7 @@ log4j.appender.mail.layout.ConversionPattern=%d  %-5p %c %x - %m%n
 log4j.appender.jcr.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
 
 log4j.appender.logfile=org.apache.log4j.RollingFileAppender
-log4j.appender.logfile.File=Cheetah.log
+log4j.appender.logfile.File=PD-Proxy.log
 log4j.appender.logfile.MaxFileSize=512KB
 
 # Control logging for other open source packages
@@ -55,12 +55,15 @@ log4j.logger.org.springframework.cache=ERROR
 
 log4j.logger.org.springframework.security=WARN
 log4j.logger.org.apache.commons=ERROR
+log4j.logger.org.apache.struts=WARN
+log4j.logger.org.displaytag=ERROR
 # Don't show Warn for ResourceBundleMessageSource
 log4j.logger.org.springframework.context=ERROR
 log4j.logger.org.springframework=WARN
+log4j.logger.org.apache.velocity=WARN
+log4j.logger.org.tuckey.web.filters=WARN
+
 
 log4j.logger.org.springframework.web.servlet=DEBUG
 log4j.logger.org.directwebremoting.spring=DEBUG
-log4j.logger.com.ly.web=DEBUG
-log4j.logger.com.ly.proxy=INFO
-log4j.logger.com.ly.web.reader.ExcelReader=ERROR
+log4j.logger.com.ly.proxy=DEBUG
