Monkey - added log info.

--- a/Monkey/src/main/resources/log4j.properties
+++ b/Monkey/src/main/resources/log4j.properties
@@ -91,3 +91,5 @@ log4j.logger.net.jawr=WARN
 log4j.logger.org.springframework.web.servlet=DEBUG
 log4j.logger.org.directwebremoting.spring=DEBUG
 log4j.logger.com.ly.web=DEBUG
+log4j.logger.com.ly.file=INFO
+log4j.logger.com.ly.excel=ERROR
