Monkey - update log and add exclusive.

--- a/Monkey/pom.xml
+++ b/Monkey/pom.xml
@@ -23,6 +23,12 @@
       <groupId>com.ly</groupId>
       <artifactId>PD-Capture</artifactId>
       <version>${app.version}</version>
+      <exclusions>
+        <exclusion>
+          <groupId>*</groupId>
+          <artifactId>*</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     
     <dependency>
