--- a/Monkey/src/main/resources/log4j.properties
+++ b/Monkey/src/main/resources/log4j.properties
@@ -92,4 +92,4 @@ log4j.logger.org.springframework.web.servlet=DEBUG
 log4j.logger.org.directwebremoting.spring=DEBUG
 log4j.logger.com.ly.web=DEBUG
 log4j.logger.com.ly.file=INFO
-log4j.logger.com.ly.excel=ERROR
+log4j.logger.com.ly.web.excel=ERROR
