--- a/Butterfly/src/main/resources/log4j.properties
+++ b/Butterfly/src/main/resources/log4j.properties
@@ -9,7 +9,7 @@ log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 
 # Pattern to output the caller's file name and line number.
-log4j.appender.stdout.layout.ConversionPattern=[Monkey] %d{ISO8601} %p [%t] %C.%M(%L) | %m%n
+log4j.appender.stdout.layout.ConversionPattern=[Butterfly] %d{ISO8601} %p [%t] %C.%M(%L) | %m%n
 
 log4j.appender.R=org.apache.log4j.RollingFileAppender
 
@@ -18,9 +18,9 @@ log4j.appender.R=org.apache.log4j.RollingFileAppender
 # to contain this variables - for example in the catalina.sh or catalina.bat
 # file
 
-log4j.appender.R.File=Monkey.log
+log4j.appender.R.File=Butterfly.log
 
-log4j.appender.R.MaxFileSize=100KB
+log4j.appender.R.MaxFileSize=1024KB
 
 # Don't keep a backup file
 log4j.appender.R.MaxBackupIndex=0
@@ -33,7 +33,7 @@ log4j.appender.mail=org.apache.log4j.net.SMTPAppender
 log4j.appender.mail.SMTPHost=localhost
 log4j.appender.mail.Threshold=ERROR
 log4j.appender.mail.BufferSize=1
-log4j.appender.mail.Subject=[localhost] MyApp Application Error
+log4j.appender.mail.Subject=[localhost] Butterfly Application Error
 
 log4j.appender.mail.layout=org.apache.log4j.PatternLayout
 log4j.appender.mail.layout.ConversionPattern=%d  %-5p %c %x - %m%n
@@ -42,7 +42,7 @@ log4j.appender.mail.layout.ConversionPattern=%d  %-5p %c %x - %m%n
 log4j.appender.jcr.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
 
 log4j.appender.logfile=org.apache.log4j.RollingFileAppender
-log4j.appender.logfile.File=MyApp.log
+log4j.appender.logfile.File=Butterfly.log
 log4j.appender.logfile.MaxFileSize=512KB
 
 # Control logging for other open source packages
@@ -55,42 +55,12 @@ log4j.logger.org.springframework.cache=ERROR
 
 log4j.logger.org.springframework.security=WARN
 log4j.logger.org.apache.commons=ERROR
-log4j.logger.org.apache.struts=WARN
-log4j.logger.org.displaytag=ERROR
 # Don't show Warn for ResourceBundleMessageSource
 log4j.logger.org.springframework.context=ERROR
 log4j.logger.org.springframework=WARN
-log4j.logger.org.apache.velocity=WARN
-log4j.logger.org.tuckey.web.filters=WARN
-
-log4j.logger.org.directwebremoting=WARN
-
-#log4j.logger.org.springmodules=DEBUG
-#log4j.logger.org.apache.jackrabbit=DEBUG
-
-# Don't show debug logs for WebTest
-log4j.logger.com.canoo.webtest=WARN
-log4j.logger.com.gargoylesoftware.htmlunit=WARN
-
-# All hibernate log output of "info" level or higher goes to stdout.
-# For more verbose logging, change the "info" to "debug" on the last line.
-log4j.logger.org.hibernate.ps.PreparedStatementCache=WARN
-log4j.logger.org.hibernate=WARN
-
-# Changing the log level to DEBUG will result in Hibernate generated
-# SQL to be logged.
-log4j.logger.org.hibernate.SQL=ERROR
-
-# Changing the log level to DEBUG will result in the PreparedStatement
-# bound variable values to be logged.
-log4j.logger.org.hibernate.type=ERROR
-
-# Print messages up to level INFO
-log4j.logger.net.jawr=WARN
 
 log4j.logger.org.springframework.web.servlet=DEBUG
 log4j.logger.org.directwebremoting.spring=DEBUG
-log4j.logger.com.ly.web=DEBUG
-log4j.logger.com.ly.file=INFO
-log4j.logger.com.ly.web.utils=ERROR
-log4j.logger.com.ly.web.excel.ExcelReader=INFO
+log4j.logger.org.apache.spark=WARN
+log4j.logger.org.spark_project=WARN
+log4j.logger.org.apache.hadoop=WARN
