--- a/Cheetah/pom.xml
+++ b/Cheetah/pom.xml
@@ -21,11 +21,23 @@
       <groupId>com.ly</groupId>
       <artifactId>Lion</artifactId>
       <version>${app.version}</version>
+      <exclusions>
+        <exclusion>
+          <artifactId>*</artifactId>
+          <groupId>*</groupId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>com.ly</groupId>
       <artifactId>Rabbit</artifactId>
       <version>${app.version}</version>
+      <exclusions>
+        <exclusion>
+          <artifactId>*</artifactId>
+          <groupId>*</groupId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>com.ly</groupId>
@@ -42,6 +54,12 @@
       <groupId>com.ly</groupId>
       <artifactId>PD-Capture</artifactId>
       <version>${app.version}</version>
+      <exclusions>
+        <exclusion>
+          <artifactId>*</artifactId>
+          <groupId>*</groupId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>com.ly</groupId>
@@ -96,7 +114,7 @@
     <dependency>
       <groupId>org.seleniumhq.selenium</groupId>
       <artifactId>selenium-java</artifactId>
-      <version>LATEST</version>
+      <version>${selenium.version}</version>
     </dependency>
     <dependency>
       <groupId>org.openqa.selenium.core</groupId>
@@ -107,12 +125,12 @@
     <dependency>
       <groupId>org.seleniumhq.selenium</groupId>
       <artifactId>selenium-firefox-driver</artifactId>
-      <version>LATEST</version>
+      <version>${selenium.version}</version>
     </dependency>
     <dependency>
       <groupId>org.seleniumhq.selenium</groupId>
       <artifactId>selenium-chrome-driver</artifactId>
-      <version>LATEST</version>
+      <version>${selenium.version}</version>
     </dependency>
     <dependency>
       <groupId>org.seleniumhq.selenium</groupId>
@@ -122,7 +140,7 @@
     <dependency>
       <groupId>org.seleniumhq.selenium</groupId>
       <artifactId>selenium-api</artifactId>
-      <version>LATEST</version>
+      <version>${selenium.version}</version>
     </dependency>
     <dependency>
       <groupId>com.saucelabs</groupId>
