--- a/PD-Proxy/pom.xml
+++ b/PD-Proxy/pom.xml
@@ -40,12 +40,17 @@
       <artifactId>spring-context</artifactId>
       <version>${spring.version}</version>
     </dependency>
-    
     <dependency>
-      <groupId>com.thoughtworks.xstream</groupId>
-      <artifactId>xstream</artifactId>
-      <version>1.4.9</version>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpclient</artifactId>
+      <version>${httpclient.version}</version>
     </dependency>
+
+    <!--<dependency>-->
+      <!--<groupId>com.thoughtworks.xstream</groupId>-->
+      <!--<artifactId>xstream</artifactId>-->
+      <!--<version>1.4.9</version>-->
+    <!--</dependency>-->
     
   </dependencies>
   
