--- a/pom.xml
+++ b/pom.xml
@@ -294,7 +294,8 @@
     <!--<httpcomponents.version>4.5.2</httpcomponents.version>-->
     <!--<httpclient.version>3.1</httpclient.version>-->
     
-    <selenium.version>2.53.1</selenium.version>
+    <!--<selenium.version>2.53.1</selenium.version>-->
+    <selenium.version>3.4.0</selenium.version>
     
     
 
