--- a/Monkey/pom.xml
+++ b/Monkey/pom.xml
@@ -135,6 +135,14 @@
       <artifactId>xerces</artifactId>
       <version>${xerces.version}</version>
     </dependency>
+
+    <!--<dependency>-->
+      <!--<groupId>net.lightbody.bmp</groupId>-->
+      <!--<artifactId>browsermob-core</artifactId>-->
+      <!--<version>2.1.4</version>-->
+      <!--&lt;!&ndash;<scope>test</scope>&ndash;&gt;-->
+    <!--</dependency>-->
+    
     <!--<dependency>-->
       <!--<groupId>com.google.inject</groupId>-->
       <!--<artifactId>guice</artifactId>-->
