--- a/PD-Proxy/pom.xml
+++ b/PD-Proxy/pom.xml
@@ -16,6 +16,12 @@
   
   <dependencies>
     <dependency>
+      <groupId>com.ly</groupId>
+      <artifactId>PD-Utils</artifactId>
+      <version>${app.version}</version>
+    </dependency>
+    
+    <dependency>
       <groupId>xerces</groupId>
       <artifactId>xerces</artifactId>
       <version>${xerces.version}</version>
@@ -45,6 +51,12 @@
       <artifactId>httpclient</artifactId>
       <version>${httpclient.version}</version>
     </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-annotations</artifactId>
+      <version>2.8.3</version>
+    </dependency>
+    
 
     <!--<dependency>-->
       <!--<groupId>com.thoughtworks.xstream</groupId>-->
