--- a/Monkey/pom.xml
+++ b/Monkey/pom.xml
@@ -54,6 +54,11 @@
         </exclusion>
       </exclusions>
     </dependency>
+    <dependency>
+      <groupId>com.ly</groupId>
+      <artifactId>Rooster</artifactId>
+      <version>${app.version}</version>
+    </dependency>
     
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
